--- a/scss/index/_contenedor.scss
+++ b/scss/index/_contenedor.scss
@@ -5,7 +5,7 @@
                          "pie pie";
     grid-template-rows: 10vh 220vh 5vh;
     animation-name: contenedor;
-    animation-duration: 4s;
+    animation-duration: $duracion-por-defecto;
     
 }
 
