--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
+@charset "UTF-8";
+.contenedor {
+  display: grid;
+  grid-template-areas: "logo nav" "ppal ppal" "pie pie";
+  grid-template-rows: 10vh 220vh 5vh;
+  animation-name: contenedor;
+  animation-duration: 3s; }
+
+@keyframes contenedor {
+  0% {
+    opacity: 0.0; }
+  100% {
+    opacity: 1; } }
+
 footer {
   grid-area: pie;
   display: grid;
@@ -9,15 +23,15 @@ footer {
     grid-area: rrss;
     display: flex;
     justify-self: right;
-    margin-right: 8vw;
+    margin-right: 5vw;
     list-style: none;
     align-self: center;
-    transition: ease-out 0.5s; }
-  footer li a {
-    transition: all .2s ease-in-out; }
+    transition: all 0.3s ease-in-out; }
+  footer li a svg {
+    transition: all 0.3s ease-in-out; }
     footer li a svg:hover {
-      opacity: 0.5;
-      transform: scale(1.1); }
+      opacity: 0.8;
+      transform: scale(1.05); }
   footer h2 {
     grid-area: copy;
     font-size: 2vh;
@@ -25,17 +39,43 @@ footer {
     align-self: center;
     color: black; }
 
+.contenedor {
+  display: grid;
+  grid-template-areas: "logo nav" "ppal ppal" "pie pie";
+  grid-template-rows: 10vh 220vh 5vh;
+  animation-name: contenedor;
+  animation-duration: 3s; }
+
+@keyframes contenedor {
+  0% {
+    opacity: 0.0; }
+  100% {
+    opacity: 1; } }
+
 header {
   grid-area: logo;
   align-self: center;
   margin-left: 12vw; }
   header img {
-    width: 20%;
-    transition: ease-out 0.5s;
+    width: 25%;
+    transition: all 0.3s ease-in-out;
     animation-name: colorTexto;
     animation-duration: 3s; }
     header img:hover {
       opacity: 0.5; }
+
+.contenedor {
+  display: grid;
+  grid-template-areas: "logo nav" "ppal ppal" "pie pie";
+  grid-template-rows: 10vh 220vh 5vh;
+  animation-name: contenedor;
+  animation-duration: 3s; }
+
+@keyframes contenedor {
+  0% {
+    opacity: 0.0; }
+  100% {
+    opacity: 1; } }
 
 nav {
   grid-area: nav;
@@ -48,17 +88,19 @@ nav {
     display: flex;
     list-style: none; }
     nav ul li {
-      transition: ease-out 0.2s; }
+      transition: all 0.3s ease-in-out; }
       nav ul li:hover {
         transform: scale(1.03); }
         nav ul li:hover .subMenu {
           display: block; }
+      nav ul li .active {
+        font-weight: 900; }
       nav ul li a {
         padding: 1.5vh;
         font-size: 2.2vh;
         text-decoration: none;
         color: black;
-        transition: ease-out 0.5s; }
+        transition: all 0.3s ease-in-out; }
         nav ul li a:hover {
           opacity: 0.5; }
       nav ul li ul {
@@ -69,12 +111,36 @@ nav {
           margin-top: 2vh;
           justify-self: left; }
 
+.contenedor {
+  display: grid;
+  grid-template-areas: "logo nav" "ppal ppal" "pie pie";
+  grid-template-rows: 10vh 220vh 5vh;
+  animation-name: contenedor;
+  animation-duration: 3s; }
+
+@keyframes contenedor {
+  0% {
+    opacity: 0.0; }
+  100% {
+    opacity: 1; } }
+
+/*Contenido principal*/
 main {
   grid-area: ppal;
   display: grid;
   grid-template-areas: ". . residencial" ". . edificio" ". . proy" ". . wa" "quienes texto texto" "project project project";
   grid-template-rows: 40vh 15vh 10vh 30vh 60vh 60vh;
-  grid-template-columns: 30% 40% 30%; }
+  grid-template-columns: 30% 40% 30%;
+  /*Título secundario - Residencial*/
+  /*Título principal - Edificio A1*/
+  /*Botón Ver proyecto*/
+  /*Línea divisoria*/
+  /* Título Sobre Nosotros*/
+  /*Párrafos sobre nosotros*/
+  /*Línea divisoria*/
+  /*Nuestro proyectos*/
+  /*Línea divisoria*/
+  /*Logo de WhatsApp*/ }
   main h3 {
     font-weight: 600;
     grid-area: residencial;
@@ -95,12 +161,12 @@ main {
     color: black;
     grid-area: proy;
     align-self: start;
-    transition: ease-out 0.5s;
+    transition: all 0.3s ease-in-out;
     animation-name: colorTexto;
     animation-duration: 5s; }
     main .tituloVerProyecto:hover {
       opacity: 0.5;
-      font-size: 2.6vh; }
+      font-size: 2.55vh; }
   main .lineaDivisoria {
     position: absolute;
     margin-top: 110vh;
@@ -115,31 +181,37 @@ main {
     margin-top: 20vh;
     margin-left: 5vw;
     font-size: 5vh; }
-  main .textoQuienes {
+  main .sobreNosotrosTexto {
     margin-top: 20vh;
     margin-left: 40vh;
     margin-right: 20vh;
     grid-area: texto;
-    align-self: start; }
-    main .textoQuienes h6 {
+    align-self: start;
+    /*Primer título*/
+    /*Párrafo principal*/
+    /*Párrafo secundario*/
+    /*Botón conocer más*/ }
+    main .sobreNosotrosTexto h6 {
+      font-size: 1.8vh;
       opacity: 0.5; }
-    main .textoQuienes .parrafoUno {
+    main .sobreNosotrosTexto .parrafoUno {
       margin-top: 2vh;
       font-weight: 600;
       font-size: 2.2vh; }
-    main .textoQuienes .parrafoDos {
+    main .sobreNosotrosTexto .parrafoDos {
       font-size: 2vh;
       margin-top: 3vh;
       margin-bottom: 4vh;
       column-count: 2;
       column-gap: 50% 50%; }
-    main .textoQuienes a {
+    main .sobreNosotrosTexto a {
       color: black;
-      font-weight: 400;
+      font-weight: 300;
       font-size: 2.2vh;
-      transition: ease-out 0.5s; }
-      main .textoQuienes a:hover {
-        opacity: 0.5; }
+      transition: all 0.3s ease-in-out; }
+      main .sobreNosotrosTexto a:hover {
+        opacity: 0.5;
+        font-size: 2.25vh; }
   main .lineaDivisoriaDos {
     position: absolute;
     margin-top: 160vh;
@@ -153,35 +225,44 @@ main {
     display: grid;
     grid-template-areas: "titulo projectOne projectTwo" "texto projectOne projectTwo";
     grid-template-rows: 40% 60%;
-    grid-template-columns: 25% 37.5% 37.5%; }
+    grid-template-columns: 25% 37.5% 37.5%;
+    /*Títulos proyectos*/
+    /*Párrafo explicativo de nuestros proyectos*/
+    /*Primer proyecto*/
+    /*Segundo proyecto*/ }
     main .projectsMain .projectsTitulo {
       grid-area: titulo;
       align-self: start;
       margin-top: 10vh;
       margin-left: 5vw;
-      font-size: 4.5vh; }
+      font-size: 4.6vh; }
     main .projectsMain .projectsParrafo {
       grid-area: texto;
       margin-left: 5vw;
       justify-self: center;
-      font-weight: 500;
-      font-size: 2vh; }
+      font-weight: 2.5vh;
+      font-size: 2vh;
+      /*Botón ver proyectos*/ }
       main .projectsMain .projectsParrafo a {
         color: black;
         font-weight: 600;
-        font-size: 2vh; }
+        font-size: 2vh;
+        transition: all 0.3s ease-in-out; }
         main .projectsMain .projectsParrafo a:hover {
-          opacity: 0.5; }
+          opacity: 0.5;
+          font-size: 2.05vh; }
     main .projectsMain .projectOne {
       grid-area: projectOne;
       margin-top: 12vh;
-      margin-left: 5vw; }
-      main .projectsMain .projectOne a {
-        transition: ease-out 0.5s; }
-        main .projectsMain .projectOne a:hover {
-          opacity: 0.5; }
-        main .projectsMain .projectOne a img {
-          width: 100%; }
+      margin-left: 5vw;
+      /*Nombre del proyecto*/
+      /*Nombre de la ubicación del proyecto*/ }
+      main .projectsMain .projectOne a img {
+        transition: all 0.3s ease-in-out;
+        width: 100%; }
+        main .projectsMain .projectOne a img:hover {
+          opacity: 0.8;
+          transform: scale(1.02); }
       main .projectsMain .projectOne .tituloProjectOne {
         font-size: 2vh;
         margin-top: 2vh; }
@@ -191,19 +272,29 @@ main {
     main .projectsMain .projectTwo {
       grid-area: projectTwo;
       margin-top: 12vh;
-      margin-left: 5vw; }
-      main .projectsMain .projectTwo a {
-        transition: ease-out 0.5s; }
-        main .projectsMain .projectTwo a:hover {
-          opacity: 0.5; }
-        main .projectsMain .projectTwo a img {
-          width: 100%; }
+      margin-right: 5vw;
+      /*Nombre del proyecto*/
+      /*Nombre de la ubicación del proyecto*/ }
+      main .projectsMain .projectTwo a img {
+        width: 100%;
+        transition: all 0.3s ease-in-out; }
+        main .projectsMain .projectTwo a img:hover {
+          opacity: 0.8;
+          transform: scale(1.02); }
       main .projectsMain .projectTwo .tituloProjectTwo {
         font-size: 2vh;
         margin-top: 2vh; }
       main .projectsMain .projectTwo .ubicacionProjectTwo {
         margin-top: 1vh;
         opacity: 0.3; }
+  main .lineaDivisoriaTres {
+    position: absolute;
+    margin-top: 215vh;
+    justify-self: center;
+    background-color: black;
+    height: 0.5px;
+    width: 50vw;
+    opacity: 0.3; }
   main .logoWhatsapp {
     position: fixed;
     margin-left: 90vw;
@@ -212,10 +303,23 @@ main {
     animation-duration: 3s; }
     main .logoWhatsapp img {
       width: 90%;
-      transition: all .2s ease-in-out; }
+      transition: all 0.3s ease-in-out; }
       main .logoWhatsapp img:hover {
         opacity: 0.8;
         transform: scale(1.05); }
+
+.contenedor {
+  display: grid;
+  grid-template-areas: "logo nav" "ppal ppal" "pie pie";
+  grid-template-rows: 10vh 220vh 5vh;
+  animation-name: contenedor;
+  animation-duration: 3s; }
+
+@keyframes contenedor {
+  0% {
+    opacity: 0.0; }
+  100% {
+    opacity: 1; } }
 
 footer {
   grid-area: pie;
@@ -228,21 +332,210 @@ footer {
     grid-area: rrss;
     display: flex;
     justify-self: right;
-    margin-right: 8vw;
+    margin-right: 5vw;
     list-style: none;
     align-self: center;
-    transition: ease-out 0.5s; }
-  footer li a {
-    transition: all .2s ease-in-out; }
+    transition: all 0.3s ease-in-out; }
+  footer li a svg {
+    transition: all 0.3s ease-in-out; }
     footer li a svg:hover {
-      opacity: 0.5;
-      transform: scale(1.1); }
+      opacity: 0.8;
+      transform: scale(1.05); }
   footer h2 {
     grid-area: copy;
     font-size: 2vh;
     font-weight: 300;
     align-self: center;
     color: black; }
+
+.contenedorNosotros {
+  display: grid;
+  grid-template-areas: "logo nav" "ppal ppal" "pie pie";
+  grid-template-rows: 10vh 295vh 5vh;
+  animation-name: contenedor;
+  animation-duration: 3s; }
+
+@keyframes contenedor {
+  0% {
+    opacity: 0.0; }
+  100% {
+    opacity: 1; } }
+
+.contenedorNosotros {
+  display: grid;
+  grid-template-areas: "logo nav" "ppal ppal" "pie pie";
+  grid-template-rows: 10vh 295vh 5vh;
+  animation-name: contenedor;
+  animation-duration: 3s; }
+
+@keyframes contenedor {
+  0% {
+    opacity: 0.0; }
+  100% {
+    opacity: 1; } }
+
+/*Contenido principal Nosotros*/
+.contenidoPrincipalNosotros {
+  grid-area: ppal;
+  display: grid;
+  grid-template-areas: ". . nuestro" ". . equipo" ". . wa" "part part part";
+  grid-template-rows: 40vh 15vh 60vh 100vh;
+  grid-template-columns: 30% 40% 30%;
+  /*Título secundario - Nuestro*/
+  /*Título principal - Equipo*/
+  /*Línea divisoria*/
+  /*Tarjetas de participantes del equipo*/ }
+  .contenidoPrincipalNosotros h3 {
+    font-weight: 600;
+    grid-area: nuestro;
+    align-self: end;
+    animation-name: colorTexto;
+    animation-duration: 3s; }
+  .contenidoPrincipalNosotros h1 {
+    font-size: 7vh;
+    font-weight: 900;
+    grid-area: equipo;
+    align-self: start;
+    animation-name: colorTexto;
+    animation-duration: 3s; }
+  .contenidoPrincipalNosotros .lineaDivisoriaNosotros {
+    position: absolute;
+    margin-top: 110vh;
+    justify-self: center;
+    background-color: black;
+    height: 0.5px;
+    width: 60vw;
+    opacity: 0.3; }
+  .contenidoPrincipalNosotros .participantes {
+    grid-area: part;
+    display: grid;
+    grid-template-areas: "soli soli soli" "belu belu belu" "jl jl jl" "jj jj jj";
+    grid-template-columns: 80% 20%;
+    grid-template-rows: 45vh 45vh 45vh 45vh;
+    /*Línea divisoria*/
+    /*Línea divisoria*/
+    /*Línea divisoria*/
+    /*Línea divisoria*/ }
+    .contenidoPrincipalNosotros .participantes .cartaSoli {
+      grid-area: soli;
+      display: grid;
+      grid-template-areas: "titulo imagen" "texto imagen";
+      grid-template-rows: 10vh 25vh; }
+      .contenidoPrincipalNosotros .participantes .cartaSoli img {
+        grid-area: imagen;
+        height: 100%;
+        margin-right: 20vw; }
+      .contenidoPrincipalNosotros .participantes .cartaSoli h4 {
+        grid-area: titulo;
+        font-size: 5vh;
+        margin-left: 20vw;
+        font-weight: 300; }
+      .contenidoPrincipalNosotros .participantes .cartaSoli p {
+        grid-area: texto;
+        margin-left: 20vw;
+        margin-right: 5vw;
+        font-size: 3vh;
+        font-weight: 500;
+        font-style: italic;
+        opacity: 0.5; }
+    .contenidoPrincipalNosotros .participantes .lineaDivisoriaNosotrosDos {
+      position: absolute;
+      margin-top: 40vh;
+      justify-self: center;
+      background-color: black;
+      height: 0.5px;
+      width: 60vw;
+      opacity: 0.3; }
+    .contenidoPrincipalNosotros .participantes .cartaBelu {
+      grid-area: belu;
+      display: grid;
+      grid-template-areas: "titulo imagen" "texto imagen";
+      grid-template-rows: 10vh 25vh; }
+      .contenidoPrincipalNosotros .participantes .cartaBelu img {
+        grid-area: imagen;
+        height: 100%;
+        margin-right: 20vw; }
+      .contenidoPrincipalNosotros .participantes .cartaBelu h4 {
+        grid-area: titulo;
+        font-size: 5vh;
+        margin-left: 20vw;
+        font-weight: 300; }
+      .contenidoPrincipalNosotros .participantes .cartaBelu p {
+        grid-area: texto;
+        margin-left: 20vw;
+        margin-right: 5vw;
+        font-size: 3vh;
+        font-weight: 500;
+        font-style: italic;
+        opacity: 0.5; }
+    .contenidoPrincipalNosotros .participantes .lineaDivisoriaNosotrosTres {
+      position: absolute;
+      margin-top: 85vh;
+      justify-self: center;
+      background-color: black;
+      height: 0.5px;
+      width: 60vw;
+      opacity: 0.3; }
+    .contenidoPrincipalNosotros .participantes .cartaJl {
+      grid-area: jl;
+      display: grid;
+      grid-template-areas: "titulo imagen" "texto imagen";
+      grid-template-rows: 10vh 25vh; }
+      .contenidoPrincipalNosotros .participantes .cartaJl img {
+        grid-area: imagen;
+        height: 100%;
+        margin-right: 20vw; }
+      .contenidoPrincipalNosotros .participantes .cartaJl h4 {
+        grid-area: titulo;
+        font-size: 5vh;
+        margin-left: 20vw;
+        font-weight: 300; }
+      .contenidoPrincipalNosotros .participantes .cartaJl p {
+        grid-area: texto;
+        margin-left: 20vw;
+        margin-right: 5vw;
+        font-size: 3vh;
+        font-weight: 500;
+        font-style: italic;
+        opacity: 0.5; }
+    .contenidoPrincipalNosotros .participantes .lineaDivisoriaNosotrosCuatro {
+      position: absolute;
+      margin-top: 130vh;
+      justify-self: center;
+      background-color: black;
+      height: 0.5px;
+      width: 60vw;
+      opacity: 0.3; }
+    .contenidoPrincipalNosotros .participantes .cartaJj {
+      grid-area: jj;
+      display: grid;
+      grid-template-areas: "titulo imagen" "texto imagen";
+      grid-template-rows: 10vh 25vh; }
+      .contenidoPrincipalNosotros .participantes .cartaJj img {
+        grid-area: imagen;
+        height: 100%;
+        margin-right: 20vw; }
+      .contenidoPrincipalNosotros .participantes .cartaJj h4 {
+        grid-area: titulo;
+        font-size: 5vh;
+        margin-left: 20vw;
+        font-weight: 300; }
+      .contenidoPrincipalNosotros .participantes .cartaJj p {
+        grid-area: texto;
+        margin-left: 20vw;
+        margin-right: 5vw;
+        font-size: 3vh;
+        font-weight: 500;
+        font-style: italic;
+        opacity: 0.5; }
+    .contenidoPrincipalNosotros .participantes .lineaDivisoriaNosotrosCinco {
+      position: absolute;
+      margin-top: 175vh;
+      justify-self: center;
+      background-color: black;
+      height: 0.5px;
+      width: 60vw;
+      opacity: 0.3; }
 
 * {
   padding: 0%;
@@ -260,14 +553,3 @@ footer {
     max-width: 100%;
     animation-name: contenedor;
     animation-duration: 4s; }
-
-.logoMyle {
-  width: 20%;
-  transition: ease-out 0.5s;
-  animation-name: colorTexto;
-  animation-duration: 3s; }
-  .logoMyle:hover {
-    opacity: 0.5; }
-
-.letraFuerte {
-  font-weight: 900; }
