--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -3,6 +3,7 @@
 $fuente-principal: 'Lato', sans-serif;
 
 // tamaño de fuente //
+$fuente-n7: 9vh;
 $fuente-n6: 7vh;
 $fuente-n5: 5vh;
 $fuente-n4: 4.6vh;
