--- a/css/styles.css
+++ b/css/styles.css
@@ -12,33 +12,6 @@
   100% {
     opacity: 1; } }
 
-footer {
-  grid-area: pie;
-  display: grid;
-  grid-template-areas: "rrss copy";
-  grid-template-columns: 45% 55%;
-  animation-name: colorTexto;
-  animation-duration: 5s; }
-  footer ul {
-    grid-area: rrss;
-    display: flex;
-    justify-self: right;
-    margin-right: 5vw;
-    list-style: none;
-    align-self: center;
-    transition: all 0.3s ease-in-out; }
-  footer li a svg {
-    transition: all 0.3s ease-in-out; }
-    footer li a svg:hover {
-      opacity: 0.8;
-      transform: scale(1.05); }
-  footer h2 {
-    grid-area: copy;
-    font-size: 2vh;
-    font-weight: 300;
-    align-self: center;
-    color: black; }
-
 .contenedor {
   display: grid;
   grid-template-areas: "logo nav" "ppal ppal" "pie pie";
@@ -361,6 +334,85 @@ footer {
   100% {
     opacity: 1; } }
 
+.botonSoli {
+  position: absolute;
+  width: 27.5vw;
+  height: 75vh;
+  margin-left: 45.65vw;
+  margin-top: 18.33vh;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+  .botonSoli:hover .imagenSoli {
+    display: block; }
+
+.imagenSoli {
+  display: none;
+  position: absolute;
+  width: 27.9vw;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+
+.botonJuanjo {
+  position: absolute;
+  width: 25vw;
+  height: 85vh;
+  margin-left: 73.5vw;
+  margin-top: 13.2vh;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+  .botonJuanjo:hover .imagenJuanjo {
+    display: block; }
+
+.imagenJuanjo {
+  display: none;
+  position: absolute;
+  width: 25.4vw;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+
+.botonJoseLuis {
+  position: absolute;
+  width: 30vw;
+  height: 75vh;
+  margin-left: 16.7vw;
+  margin-top: 23.08vh;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+  .botonJoseLuis:hover .imagenJoseLuis {
+    display: block; }
+
+.imagenJoseLuis {
+  display: none;
+  position: absolute;
+  width: 30.145vw;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+
+.botonBelu {
+  position: absolute;
+  width: 20vw;
+  height: 75vh;
+  margin-top: 26.4vh;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+  .botonBelu:hover .imagenBelu {
+    display: block; }
+
+.imagenBelu {
+  display: none;
+  position: absolute;
+  width: 19.6vw;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+
 .contenedorNosotros {
   display: grid;
   grid-template-areas: "logo nav" "ppal ppal" "pie pie";
@@ -374,12 +426,91 @@ footer {
   100% {
     opacity: 1; } }
 
+.botonSoli {
+  position: absolute;
+  width: 27.5vw;
+  height: 75vh;
+  margin-left: 45.65vw;
+  margin-top: 18.33vh;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+  .botonSoli:hover .imagenSoli {
+    display: block; }
+
+.imagenSoli {
+  display: none;
+  position: absolute;
+  width: 27.9vw;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+
+.botonJuanjo {
+  position: absolute;
+  width: 25vw;
+  height: 85vh;
+  margin-left: 73.5vw;
+  margin-top: 13.2vh;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+  .botonJuanjo:hover .imagenJuanjo {
+    display: block; }
+
+.imagenJuanjo {
+  display: none;
+  position: absolute;
+  width: 25.4vw;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+
+.botonJoseLuis {
+  position: absolute;
+  width: 30vw;
+  height: 75vh;
+  margin-left: 16.7vw;
+  margin-top: 23.08vh;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+  .botonJoseLuis:hover .imagenJoseLuis {
+    display: block; }
+
+.imagenJoseLuis {
+  display: none;
+  position: absolute;
+  width: 30.145vw;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+
+.botonBelu {
+  position: absolute;
+  width: 20vw;
+  height: 75vh;
+  margin-top: 26.4vh;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+  .botonBelu:hover .imagenBelu {
+    display: block; }
+
+.imagenBelu {
+  display: none;
+  position: absolute;
+  width: 19.6vw;
+  animation-name: contenedor;
+  animation-duration: 1s;
+  transition: all 1s ease-in-out; }
+
 /*Contenido principal Nosotros*/
 .contenidoPrincipalNosotros {
   grid-area: ppal;
   display: grid;
-  grid-template-areas: ". . nuestro" ". . equipo" ". . wa" "part part part";
-  grid-template-rows: 40vh 15vh 60vh 100vh;
+  grid-template-areas: ". . nuestro" ". . equipo" ". . ." "part part part";
+  grid-template-rows: 60vh 5vh 50vh 100vh;
   grid-template-columns: 30% 40% 30%;
   /*Título secundario - Nuestro*/
   /*Título principal - Equipo*/
@@ -387,12 +518,13 @@ footer {
   /*Tarjetas de participantes del equipo*/ }
   .contenidoPrincipalNosotros h3 {
     font-weight: 600;
+    font-size: 4.6vh;
     grid-area: nuestro;
     align-self: end;
     animation-name: colorTexto;
     animation-duration: 3s; }
   .contenidoPrincipalNosotros h1 {
-    font-size: 7vh;
+    font-size: 9vh;
     font-weight: 900;
     grid-area: equipo;
     align-self: start;
@@ -427,14 +559,14 @@ footer {
         margin-right: 20vw; }
       .contenidoPrincipalNosotros .participantes .cartaSoli h4 {
         grid-area: titulo;
-        font-size: 5vh;
+        font-size: 4.6vh;
         margin-left: 20vw;
         font-weight: 300; }
       .contenidoPrincipalNosotros .participantes .cartaSoli p {
         grid-area: texto;
         margin-left: 20vw;
         margin-right: 5vw;
-        font-size: 3vh;
+        font-size: 2.5vh;
         font-weight: 500;
         font-style: italic;
         opacity: 0.5; }
@@ -464,7 +596,7 @@ footer {
         grid-area: texto;
         margin-left: 20vw;
         margin-right: 5vw;
-        font-size: 3vh;
+        font-size: 2.5vh;
         font-weight: 500;
         font-style: italic;
         opacity: 0.5; }
@@ -494,8 +626,8 @@ footer {
         grid-area: texto;
         margin-left: 20vw;
         margin-right: 5vw;
-        font-size: 3vh;
-        font-weight: 500;
+        font-size: 2.5vh;
+        font-weight: 300;
         font-style: italic;
         opacity: 0.5; }
     .contenidoPrincipalNosotros .participantes .lineaDivisoriaNosotrosCuatro {
@@ -521,11 +653,10 @@ footer {
         margin-left: 20vw;
         font-weight: 300; }
       .contenidoPrincipalNosotros .participantes .cartaJj p {
-        grid-area: texto;
         margin-left: 20vw;
         margin-right: 5vw;
-        font-size: 3vh;
-        font-weight: 500;
+        font-size: 2.5vh;
+        font-weight: 300;
         font-style: italic;
         opacity: 0.5; }
     .contenidoPrincipalNosotros .participantes .lineaDivisoriaNosotrosCinco {
@@ -536,6 +667,103 @@ footer {
       height: 0.5px;
       width: 60vw;
       opacity: 0.3; }
+
+.contenedorProyectos {
+  height: 100vh;
+  display: grid;
+  grid-template-areas: "logo . nav" "ppal ppal ppal" "pie pie pie";
+  grid-template-rows: 10% 80% 10%;
+  background-color: white;
+  animation-name: contenedorProyectos;
+  animation-duration: 3s; }
+
+@keyframes contenedorProyectos {
+  from {
+    background-color: black; }
+  to {
+    background-color: white; } }
+
+.contenedorProyectos {
+  height: 100vh;
+  display: grid;
+  grid-template-areas: "logo . nav" "ppal ppal ppal" "pie pie pie";
+  grid-template-rows: 10% 80% 10%;
+  background-color: white;
+  animation-name: contenedorProyectos;
+  animation-duration: 3s; }
+
+@keyframes contenedorProyectos {
+  from {
+    background-color: black; }
+  to {
+    background-color: white; } }
+
+.contenidoPrincipalProyectos {
+  grid-area: ppal;
+  display: grid;
+  grid-template-areas: ". nuestros ." ". proyectos ." ". img ." ". . wa";
+  grid-template-rows: 5% 10% 80% 5%;
+  grid-template-columns: 15% 70% 15%; }
+  .contenidoPrincipalProyectos h3 {
+    font-weight: 600;
+    grid-area: nuestros;
+    align-self: center;
+    animation-name: colorTexto;
+    animation-duration: 3s; }
+  .contenidoPrincipalProyectos h1 {
+    font-size: 7vh;
+    font-weight: 900;
+    grid-area: proyectos;
+    align-self: end;
+    animation-name: colorTexto;
+    animation-duration: 3s; }
+  .contenidoPrincipalProyectos .carousel {
+    grid-area: img;
+    animation-name: carousel;
+    animation-duration: 3s; }
+
+.contenedorProyectos {
+  height: 100vh;
+  display: grid;
+  grid-template-areas: "logo . nav" "ppal ppal ppal" "pie pie pie";
+  grid-template-rows: 10% 80% 10%;
+  background-color: white;
+  animation-name: contenedorProyectos;
+  animation-duration: 3s; }
+
+@keyframes contenedorProyectos {
+  from {
+    background-color: black; }
+  to {
+    background-color: white; } }
+
+.piePaginaProyectos {
+  grid-area: pie;
+  display: grid;
+  grid-template-areas: "rrss copy";
+  grid-template-columns: 85% 15%;
+  animation-name: colorTexto;
+  animation-duration: 3s; }
+  .piePaginaProyectos ul {
+    grid-area: rrss;
+    display: flex;
+    justify-self: left;
+    margin-left: 4vw;
+    list-style: none;
+    align-self: center; }
+  .piePaginaProyectos li a svg {
+    transition: all 0.3s ease-in-out; }
+    .piePaginaProyectos li a svg:hover {
+      opacity: 0.5;
+      transform: scale(2); }
+  .piePaginaProyectos li h2 {
+    grid-area: copy;
+    font-size: 1.6vh;
+    font-weight: 300;
+    justify-self: right;
+    margin-right: 1vw;
+    align-self: center;
+    color: black; }
 
 * {
   padding: 0%;
