--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -7,6 +7,7 @@ $fuente-n7: 9vh;
 $fuente-n6: 7vh;
 $fuente-n5: 5vh;
 $fuente-n4: 4.6vh;
+$fuente-n3-medio: 3.2vh;
 $fuente-n3: 2.5vh;
 $fuente-n2: 2.2vh;
 $fuente-n1: 2vh;
