--- a/scss/contacto/_contenedor-contacto.scss
+++ b/scss/contacto/_contenedor-contacto.scss
@@ -1,14 +1,13 @@
 @import "base/variables";
 @import "base/lista";
 
-.contenedorProyectos{
+.contenedorContacto{
     display: grid;
     grid-template-areas: "logo . nav"
                         "ppal ppal ppal"
-                        "pieProy pieProy pieProy";
+                        "pie pie pie";
     grid-template-rows: 10vh 85vh 5vh;
     grid-template-columns: 50% 25% 25%;
-    background-color: nth($colores, 2);
     animation-name: contenedorProyectos;
     animation-duration: 3s;
 }
