--- a/scss/proyectos/_footer-proyectos.scss
+++ b/scss/proyectos/_footer-proyectos.scss
@@ -3,38 +3,31 @@
 @import "proyectos/contenedor-proyectos";
 
 .piePaginaProyectos{
-    grid-area: pie;
-    display: grid;
-    grid-template-areas: "rrss copy";
-    grid-template-columns: 85% 15%;
-    animation-name: colorTexto;
-    animation-duration: 3s;
+    grid-area: pieProy;
     ul{
-        grid-area: rrss;
-        display: flex;
-        justify-self: left;
-        margin-left: 4vw;
+        position: absolute;
+        margin-bottom: 40vh;
         list-style: none;
-        align-self: center;
+        transition: $transicion-por-defecto;
         }
         li{
             a{
                 svg{
                 transition: $transicion-por-defecto;
                 &:hover{
-                    opacity: 0.5;
-                    transform: scale(2);
+                    opacity: $opacidad-secundaria;
+                    transform: scale(1.05);}
             }
         }
     }
-    h2{
-        grid-area: copy;
-        font-size: 1.6vh;
-        font-weight: 300;
-        justify-self: right;
-        margin-right: 1vw;
-        align-self: center;
-        color:black;
+    .copyrightProyectos{
+        position: absolute;
+        margin-bottom: 40vh;
+        font-size: $fuente-n0;
+        color:nth($colores, 1);
+        transform: rotate(-90deg);
+        strong{
+            font-weight: $grosor-n3;
         }
-    }
+        }
 }
