--- a/scss/index/_contenedor.scss
+++ b/scss/index/_contenedor.scss
@@ -4,6 +4,7 @@
                          "ppal ppal"
                          "pie pie";
     grid-template-rows: 10vh 220vh 5vh;
+    grid-template-columns: 50% 50%;
     animation-name: contenedor;
     animation-duration: $duracion-por-defecto;
     
